--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burj Azizi</title>
+    <link rel="shortcut icon" href="img/burj-logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/18.3.5/css/intlTelInput.css" integrity="sha512-VXxcTT278CJV0mFYrCVNcWp8BckqU31nWRqrvRYtw8OB82j3mZb6WkmrCanFeO5xRlyw0lGV+U3Kym4+kMvmSg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/18.3.5/js/intlTelInput.min.js" integrity="sha512-KcjcQ2KL6oVcezrL/m6NO1PW13QMnEN5BM4/u1JV9Pu0kBQgn/TmK1W6diupb4vMuGtFnO6Ojg3nzWutkow9Uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -917,7 +918,7 @@ margin:0% 3%;
     </div>
 
     <div class="row">
-    <p class="text-center">Copyright © 2024 Positive Properties - All rights reserved</p>
+    <p class="text-center">Copyright © 2024 - All rights reserved</p>
     </div>
     </div>
     </footer>
